feature: add mermaid support
1. Add mermaid support
2. Change pagination position: Newer <-> Older

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,4 +49,10 @@
     );
   </script>
 
+  <!-- mermaid -->
+  <script src="{{ site.baseurl }}/assets/mermaid/mermaid.min.js"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/mermaid/mermaid.css">
+  <script>mermaid.initialize({
+    startOnLoad:true
+  });</script>
 </head>
