feature: add comment system
1. Add comment system

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,3 +23,17 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<div id="vcomments"></div>
+<script>
+    new Valine({
+        el: '#vcomments',
+        appId: 'btJpOw9EeOt18ENMU9KgvyEB-gzGzoHsz',
+        appKey: '53reS17fjeYrjTGmOe8ONdAB',
+        notify:false, 
+        verify:false, 
+        avatar:'identicon', 
+        placeholder: 'Please comment here!',
+        visitor: true
+    })
+</script>
