--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,4 +59,7 @@
   <!-- Valine -->
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
   <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+
+  <!-- toc -->
+  <script src="{{ site.baseurl }}/assets/jekyll-table-of-contents/toc.js"></script>
 </head>
