--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+  <!-- title in header bar -->
   <title>
     {% if page.title == "Home" %}
       {{ site.title }} &middot; {{ site.tagline }}
@@ -18,6 +19,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
+  <link rel="stylesheet" media="screen" href="{{ site.baseurl }}/public/css/particles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
@@ -62,4 +64,18 @@
 
   <!-- toc -->
   <script src="{{ site.baseurl }}/assets/jekyll-table-of-contents/toc.js"></script>
+
+  <!-- particles.js -->
+  {% if page.title == "Home" %}
+  <div class="body-particles">
+  <!-- Wrapper -->
+      <div id="wrapper">
+          <!-- MY STUFF HERE, STYLED WITH MY CSS -->
+      </div>
+  </div>
+  <div id="particles-js"></div>
+  <script src="{{ site.baseurl }}/assets/particles-js/particles.js"></script>
+  <script src="{{ site.baseurl }}/assets/particles-js/app.js"></script>
+  {% endif %}
+
 </head>
