--- a/_layouts/nobar.html
+++ b/_layouts/nobar.html
@@ -12,6 +12,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/summary/" title="Home">Computer Science</a>
+            <small>chhzh123</small>
           </h3>
         </div>
       </div>
