[Fix] blog posts & publication
Successfully merge two themes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default-old
 ---
 
 <div class="post">
@@ -30,9 +30,9 @@ layout: default
         el: '#vcomments',
         appId: 'btJpOw9EeOt18ENMU9KgvyEB-gzGzoHsz',
         appKey: '53reS17fjeYrjTGmOe8ONdAB',
-        notify:false, 
-        verify:false, 
-        avatar:'identicon', 
+        notify:false,
+        verify:false,
+        avatar:'identicon',
         placeholder: 'Please comment here!',
         visitor: true
     })
