--- a/_includes/head-old.html
+++ b/_includes/head-old.html
@@ -33,7 +33,7 @@
   <!-- Load jQuery -->
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <!-- Load KaTeX -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-rc.1/katex.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-rc.1/katex.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-rc.1/katex.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-rc.1/contrib/auto-render.min.js"></script>
 
@@ -42,13 +42,23 @@
         document.getElementById("test"),
         {
             delimiters: [
+                {left: "$", right: "$", display: false},
                 {left: "$$", right: "$$", display: true},
                 {left: "\\[", right: "\\]", display: true},
-                {left: "$", right: "$", display: false},
                 {left: "\\(", right: "\\)", display: false}
             ]
         }
     );
+  </script> -->
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+    type="text/javascript"></script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+      }
+    });
   </script>
 
   <!-- mermaid -->
