--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -171,8 +171,12 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
+  overflow: scroll;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 pre code {
+  white-space: pre;
   padding: 0;
   font-size: 100%;
   color: inherit;
