--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,12 @@ layout: default-old
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
   <span class="post-date">
-  <span id="./" class="leancloud_visitors" data-flag-title="{{ page.title }}">
-    <em class="post-meta-item-text">阅读量 </em>
+    {{ page.date | date_to_string }}&emsp;
+    <span id="{{ page.url }}" class="leancloud_visitors" data-flag-title="{{ page.title }}">
+    阅读量
     <i class="leancloud-visitors-count">0</i>
-  </span>
+    </span>
   </span>
   {{ content }}
 </div>
@@ -64,7 +64,7 @@ layout: default-old
         notify:false,
         verify:false,
         avatar:'identicon',
-        placeholder: '请在这里评论！（请留下邮箱以便回复）<br/>Please comment here! (Remember to leave your email!)',
+        placeholder: '请在这里评论！（请留下邮箱以便回复）\n Please comment here! (Remember to leave your email!)',
         visitor: true
     })
 </script>
