--- a/_includes/head-old.html
+++ b/_includes/head-old.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
   <link rel="stylesheet" media="screen" href="{{ site.baseurl }}/public/css/particles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Icons -->
   <link rel="little-prince-icon" sizes="144x144" href="{{ site.baseurl }}/public/icon/little-prince-icon.jpg">
